syntax = "proto3";

package f1;
message HelloS {
   string name = 1;
}